updated figures on demo, fixed spelling

--- a/runSOM4.ipynb
+++ b/runSOM4.ipynb
@@ -411,7 +411,7 @@
     "# show curves\n",
     "figure()\n",
     "mod.meanLrnCurves( iters = iters, removeProp = removeProp  )\n",
-    "mod.showLearnCuves(window=6)\n",
+    "mod.showLearnCurves(window=6)\n",
     "\n",
     "#show trained map\n",
     "figure()\n",
@@ -847,7 +847,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.3"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
